<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    tools:context="com.example.jessi.proy1.ServiciosCercanos"
    android:onClick="FragGrifo">
    <TableLayout
        android:id="@+id/tabla"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:stretchColumns="1"
        >

        <TableRow
            android:id="@+id/fila1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


        </TableRow>

        <TableRow
            android:id="@+id/fila2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        </TableRow>

        <TableRow
            android:id="@+id/fila3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <FrameLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1">

                <ImageButton
                    android:id="@+id/btnMecanico"
                    android:layout_width="70dp"
                    android:layout_height="70dp"
                    android:layout_gravity="center_horizontal"
                    android:background="@drawable/administrative"
                    android:onClick="Mecanico"
                    android:contentDescription="@string/menBtnMecani" />
            </FrameLayout>


            <FrameLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="FragGrifo">

                <ImageButton
                    android:id="@+id/btnGrifos"
                    android:layout_width="70dp"
                    android:layout_height="70dp"
                    android:layout_centerVertical="false"
                    android:layout_gravity="center_horizontal"
                    android:background="@drawable/grifo"
                    android:nestedScrollingEnabled="false"
                    android:onClick="Grifo" />
            </FrameLayout>

        </TableRow>

        <TableRow
            android:id="@+id/fila4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <FrameLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1">

                <TextView
                    android:id="@+id/textView4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_margin="5dp"
                    android:text="@string/menTxtMecanico" />
            </FrameLayout>

            <FrameLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1">

                <TextView
                    android:id="@+id/textView5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_margin="5dp"
                    android:text="@string/menTextGrifo" />
            </FrameLayout>


        </TableRow>

    </TableLayout>

</RelativeLayout>
