<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.example.jessi.proy1.MenuVehiculo"
    android:clickable="true"
    android:background="@drawable/fondo">

    <TableLayout
        android:id="@+id/tabla"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:stretchColumns="1"
        >

        <TableRow
            android:id="@+id/fila3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <FrameLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1">

                <ImageButton
                    android:id="@+id/btnMecanico"
                    android:layout_width="70dp"
                    android:layout_height="70dp"
                    android:layout_gravity="center_horizontal"
                    android:background="@drawable/registrar"
                    android:contentDescription="@string/menBtnMecani"
                    android:onClick="RegistrarVehiculo" />
            </FrameLayout>


            <FrameLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="FragGrifo"
                android:layout_gravity="center">

                <ImageButton
                    android:id="@+id/btnGrifos"
                    android:layout_width="70dp"
                    android:layout_height="70dp"
                    android:layout_centerVertical="false"
                    android:layout_gravity="center_horizontal"
                    android:background="@drawable/listando"
                    android:nestedScrollingEnabled="false"
                    android:onClick="ListarVehiculo" />
            </FrameLayout>

        </TableRow>

        <TableRow
            android:id="@+id/fila4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <FrameLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1">

                <TextView
                    android:id="@+id/textView4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_margin="5dp"
                    android:text="@string/txtRegVehiculo"
                    android:textColor="#ffffffff" />
            </FrameLayout>

            <FrameLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1">

                <TextView
                    android:id="@+id/textView5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_margin="5dp"
                    android:text="@string/txtListVehiculo"
                    android:textColor="#ffffffff" />
            </FrameLayout>


        </TableRow>

        <TableRow
            android:id="@+id/fila3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <FrameLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1">

                <ImageButton
                    android:id="@+id/btnMecanico"
                    android:layout_width="70dp"
                    android:layout_height="70dp"
                    android:layout_gravity="center_horizontal"
                    android:background="@drawable/mantenimiento"
                    android:onClick="RegistrarMantenimiento"
                    android:contentDescription="@string/menBtnMecani" />
            </FrameLayout>


            <FrameLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="FragGrifo"
                android:layout_gravity="center">

                <ImageButton
                    android:id="@+id/btnGrifos"
                    android:layout_width="70dp"
                    android:layout_height="70dp"
                    android:layout_centerVertical="false"
                    android:layout_gravity="center_horizontal"
                    android:background="@drawable/listarmantenimiento"
                    android:nestedScrollingEnabled="false"
                    android:onClick="ListarMantenimiento" />
            </FrameLayout>

        </TableRow>

        <TableRow
            android:id="@+id/fila4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <FrameLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1">

                <TextView
                    android:id="@+id/textView4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_margin="5dp"
                    android:text="Registrar Mantenimiento"
                    android:textColor="#ffffffff" />
            </FrameLayout>

            <FrameLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1">

                <TextView
                    android:id="@+id/textView5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_margin="5dp"
                    android:text="Listar Mantenimiento"
                    android:textColor="#ffffffff" />
            </FrameLayout>


        </TableRow>
        <TableRow
            android:id="@+id/fila3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <FrameLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1">

                <ImageButton
                    android:id="@+id/btnMecanico"
                    android:layout_width="70dp"
                    android:layout_height="70dp"
                    android:layout_gravity="center_horizontal"
                    android:background="@drawable/registrarvoluntario"
                    android:onClick="ListarVoluntario"
                    android:contentDescription="@string/menBtnMecani" />
            </FrameLayout>


            <FrameLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="FragGrifo"
                android:layout_gravity="center">

                <ImageButton
                    android:id="@+id/btnGrifos"
                    android:layout_width="70dp"
                    android:layout_height="70dp"
                    android:layout_centerVertical="false"
                    android:layout_gravity="center_horizontal"
                    android:background="@drawable/listarvoluntario"
                    android:nestedScrollingEnabled="false"
                    android:onClick="ListarTipoMantenimiento" />
            </FrameLayout>

        </TableRow>

        <TableRow
            android:id="@+id/fila4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <FrameLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1">

                <TextView
                    android:id="@+id/textView4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_margin="5dp"
                    android:text="Listar Voluntario"
                    android:textColor="#ffffffff" />
            </FrameLayout>

            <FrameLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1">

                <TextView
                    android:id="@+id/textView5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_margin="5dp"
                    android:text="Listar Tipo Mantenimiento"
                    android:textColor="#ffffffff" />
            </FrameLayout>


        </TableRow>

    </TableLayout>

</RelativeLayout>
